# vinci-flow

./: CMakeLists.txt  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1
.github/workflows/: push.yaml
data/: websocket-demo.php
docs/: CNAME  index.html
docs/assets/css/: style.css
docs/assets/js/: app.js
docs/pages/: api.html  home.html  install.html  themes.html  websocket.html
installer/: smart-lower-thirds-installer.nsi
src/: api.cpp  core.cpp  dock.cpp  main.cpp  server.cpp  settings.cpp  slt_helpers.cpp  state.cpp  websocket_bridge.cpp  widget.cpp
src/config/: config.hpp  config.hpp.in  const.hpp
src/headers/: api.hpp  core.hpp  dock.hpp  entities.hpp  log.hpp  server.hpp  settings.hpp  slt_helpers.hpp  state.hpp  websocket_bridge.hpp  widget.hpp
